--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-login.fxml
@@ -1,42 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.paint.Color?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.AdminLoginController">
+<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.AdminLoginController">
    <children>
-      <Label layoutX="227.0" layoutY="44.0" text="Admin Login" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="36.0" />
-         </font>
-      </Label>
-      <Label layoutX="202.0" layoutY="109.0" text="Enter Admin ID and Password"
-         textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="18.0" />
-         </font>
-      </Label>
-      <TextField fx:id="adminLoginIdBox" layoutX="210.0" layoutY="164.0" prefHeight="35.0"
-         prefWidth="230.0" promptText="Admin ID" />
-      <PasswordField fx:id="adminLoginPasswordBox" layoutX="210.0" layoutY="208.0" prefHeight="35.0"
-         prefWidth="230.0" promptText="Password" />
-      <TextField fx:id="adminLoginPasswordVisibleBox" layoutX="210.0" layoutY="208.0"
-         prefHeight="35.0" prefWidth="230.0" promptText="Password" />
-      <CheckBox fx:id="adminLoginPasswordCheckBox" layoutX="273.0" layoutY="255.0"
-         mnemonicParsing="false" onAction="#toggleAdminLoginPasswordVisibility" text="Show Password"
-         textAlignment="JUSTIFY" />
-      <Button fx:id="adminLoginButton" layoutX="248.0" layoutY="287.0" mnemonicParsing="false"
-         onAction="#processAdminLogin" prefHeight="42.0" prefWidth="154.0" text="Login"
-         textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
+      <VBox alignment="CENTER" prefHeight="350.0" prefWidth="100.0" spacing="30.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <!-- Title -->
+            <Label text="Admin Login" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS" size="40.0" />
+               </font>
+               <!-- <effect>
+                  <DropShadow offsetX="5.0" offsetY="5.0" radius="12.0" spread="0.7" color="#4CAF50"/>
+               </effect> -->
+               <style>
+                  -fx-text-fill: linear-gradient(to right, #4CAF50, #81C784);
+               </style>
+            </Label>
+
+            <!-- Subtitle -->
+            <Label text="Enter Admin ID and Password" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS" size="20.0" />
+               </font>
+               <style>
+                  -fx-text-fill: #4F4F4F;
+               </style>
+            </Label>
+
+            <!-- Form Container -->
+            <VBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="500.0" spacing="20.0">
+               <children>
+                  <!-- Admin ID Field -->
+                  <AnchorPane prefHeight="50.0" prefWidth="350.0">
+                     <children>
+                        <TextField fx:id="adminLoginIdBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Admin ID" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+
+                  <!-- Password Field -->
+                  <AnchorPane prefHeight="50.0" prefWidth="350.0">
+                     <children>
+                        <PasswordField fx:id="adminLoginPasswordBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </PasswordField>
+                        <!-- TextField for Password Visibility -->
+                        <TextField fx:id="adminLoginPasswordVisibleBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" visible="false">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+
+                  <!-- Password Visibility Toggle -->
+                  <CheckBox fx:id="adminLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleAdminLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" style="-fx-text-fill: #4F4F4F;"/>
+
+                  <!-- Login Button -->
+                  <Button fx:id="adminLoginButton" mnemonicParsing="false" onAction="#processAdminLogin" prefHeight="40.0" prefWidth="200.0" text="Login" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS" size="18.0" />
+                     </font>
+                     <style>
+                        -fx-background-color: linear-gradient(to right, #4CAF50, #81C784);
+                        -fx-text-fill: white;
+                        -fx-font-weight: bold;
+                        -fx-border-radius: 25;
+                        -fx-padding: 10px 20px;
+                        -fx-effect: dropshadow(gaussian, #333333, 10, 0.5, 0, 2);
+                        -fx-cursor: hand;
+                     </style>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
