--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-grading-page.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-grading-page.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TeacherGradingPageController">
+<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.teacherfunctionalities.TeacherGradingPageController">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
