--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard-course-management.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard-course-management.fxml
@@ -11,7 +11,7 @@
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
-    <Button fx:id="adminCourseGoBackButton" text="Back" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;" />
+    <Button fx:id="adminCourseGoBackButton" onAction="#onGoBackClicked" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;" text="Back" />
     <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: #333;" text="Course Management" />
     <TableView fx:id="adminDashboardCoursesTableView" prefHeight="250" prefWidth="550" style="-fx-background-color: #f4f4f9;">
         <columns>
@@ -23,5 +23,5 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
         </columnResizePolicy>
     </TableView>
-    <Button fx:id="adminDashboardAddCourseButton" text="Add Course" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-font-size: 14px;" />
+    <Button fx:id="adminDashboardAddCourseButton" onAction="#onAddCourseClicked" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-font-size: 14px;" text="Add Course" />
 </VBox>
