--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard.fxml
@@ -106,6 +106,11 @@
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </Button>
+                              <Button fx:id="notificationsButton" layoutX="87.0" layoutY="133.0" mnemonicParsing="false" onAction="#handleViewNotifications" prefWidth="250.0" styleClass="dashboard-button" stylesheets="@styles.css" text="Notifications">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
 
                               <!-- Refresh Button -->
                               <Button fx:id="studentRefreshButton" mnemonicParsing="false" onAction="#handleStudentRefresh" prefWidth="250.0" styleClass="dashboard-button" stylesheets="@styles.css" text="Sync Data">
